Fix grid alignment

--- a/src/styles/blocks/main.css
+++ b/src/styles/blocks/main.css
@@ -1,14 +1,26 @@
 .main {
   display: flex;
   flex-flow: column;
-  gap: var(--space-3xl);
+  gap: var(--space-2xl);
 }
 
 @media screen and (min-width: 736px) {
   .main {
     display: grid;
-    gap: var(--space-3xl) 7rem;
+    column-gap: 64px;
     grid-template: "skills familiar-with" auto
                    "skills languages" 1fr;
+  }
+}
+
+@media screen and (min-width: 1008px) {
+  .main {
+    column-gap: 96px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main {
+    column-gap: 112px;
   }
 }
